fixed spacing errors in api userData file

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,7 @@ a {
 }
 
 body {
-  background-color: #88effd;
+  background-color: #94b1e6;
 }
 
 img[id^="profile-image-"] {
